--- a/src/components/Counter.module.scss
+++ b/src/components/Counter.module.scss
@@ -1,16 +1,3 @@
-// .counter {
-//   font-size: 16pc;
-//   text-align: center;
-//   margin: 20px;
-// }
-
-// .btn {
-//   font-size: 10px;
-//   margin: 0 5px;
-//   padding: 5px 10px;
-// }
-
 .counter {
-  font-size: 16pc;
-  // ваши стили
+  font-size: 12px;
 }
