--- a/src/index.scss
+++ b/src/index.scss
@@ -5,9 +5,5 @@
 }
 
 .app {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  font-family: Arial, sans-serif;
+  font-size: 24px;
 }
