--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,9 @@
 .app {
   --bg-color: #dcdce1;
+  --inverted-bg-color: #c1c1d6;
 
   --primary-color: #5172e7;
   --secondary-color: #7c8ed0;
+  --inverted-primary-color: #8299ef;
+  --inverted-secondary-color: #979cb0;
 }
