--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -9,3 +9,11 @@
   background: none;
   outline: none;
 }
+
+.outline {
+  padding: 10px 15px;
+  border: var(--primary-color) 2px solid;
+  color: var(--primary-color);
+  background: none;
+  border-radius: 5px;
+}
