RA: 4.Modal window, Portal: lesson_29

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,10 +3,18 @@
 @import "themes/dark";
 @import "themes/normal";
 
+:root {
+  font: var(--font-l);
+}
+
+.body {
+  font: var(--font-l);
+  color: var(--primary-color);
+}
+
 .app {
   font: var(--font-l);
   background-color: var(--bg-color);
-  color: var(--primary-color);
   min-height: 100vh;
 }
 
