RA: 4. Fixing Global Styles for Modal.: lesson_31

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,11 +3,8 @@
 @import "themes/dark";
 @import "themes/normal";
 
-:root {
-  font: var(--font-l);
-}
-
-.body {
+.app,
+.app_modal {
   font: var(--font-l);
   color: var(--primary-color);
 }
