--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,13 +1,4 @@
-:root {
-  --bg-color: #2f3136;
-  --inverted-bg-color: #1b1b1c;
-  --primary-color: #8299ef;
-  --secondary-color: #979cb0;
-  --inverted-primary-color: #5172e7;
-  --inverted-secondary-color: #7c8ed0;
-}
-
-.app.dark {
+.app_dark_theme {
   --bg-color: #2f3136;
   --inverted-bg-color: #1b1b1c;
   --primary-color: #8299ef;
