--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -24,7 +24,7 @@
   border-radius: 13px;
   background: var(--bg-color);
   transition: 0.3s transform;
-  transform: scale(0.1);
+  // transform: scale(0.1);
   max-width: 60%;
 }
 
@@ -39,6 +39,7 @@
 }
 
 .isClosing {
-  transition: 0.3s transform;
-  transform: scale(0.2);
+  opacity: 0;
+  // transition: 0.3s transform;
+  // transform: scale(0.2);
 }
