--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -12,6 +12,11 @@
   }
 }
 
+.readonly {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
 .InputWrapper {
   display: flex;
   flex-direction: column;
