RA: 6. Profile module: Profile module. Avatar. Editing and saving. Private routes lesson_41

--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -3,6 +3,6 @@
   --inverted-bg-color: #c1c1d6;
   --primary-color: #5172e7;
   --secondary-color: #7c8ed0;
-  --inverted-primary-color: #8299ef;
+  --inverted-primary-color: #345ef8;
   --inverted-secondary-color: #979cb0;
 }
