--- a/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
+++ b/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
@@ -22,3 +22,13 @@
   align-items: center;
   height: 300px;
 }
+
+.avatarWrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.editing {
+  border: 2px solid var(--inverted-primary-color);
+}
