RA: 7. Entity article, async thunk, slices. Blocks. Skeleton loader, lesson_49

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,4 +5,6 @@
   --secondary-color: #979cb0;
   --inverted-primary-color: #5172e7;
   --inverted-secondary-color: #7c8ed0;
+  --skeleton-color: #202124;
+  --skeleton-shadow: #4d515b;
 }
