--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -5,4 +5,6 @@
   --secondary-color: #7c8ed0;
   --inverted-primary-color: #345ef8;
   --inverted-secondary-color: #979cb0;
+  --skeleton-color: #c1c1d6;
+  --skeleton-shadow: #b3c3ff;
 }
