--- a/src/app/styles/themes/pink.scss
+++ b/src/app/styles/themes/pink.scss
@@ -5,4 +5,6 @@
   --secondary-color: #fbf4f7;
   --inverted-primary-color: #ff2182;
   --inverted-secondary-color: #fbf4f7;
+  --skeleton-color: #ba8fa1;
+  --skeleton-shadow: #ff2182;
 }
