--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -21,6 +21,8 @@
 }
 
 .page-wrapper {
-  padding: 20px;
+  padding: 20px 20px 20px 45px;
   flex: 1;
+  height: calc(100vh - 60px);
+  overflow-y: auto;
 }
