RA: 7. Article Page. Block Structure. Code Component. Copy LABEL, lesson_50 Part01

--- a/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
+++ b/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
@@ -17,3 +17,18 @@
 .sceleton {
   margin-top: 15px;
 }
+
+.articleInfo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: start;
+  margin-top: 10px;
+}
+
+.avatarWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
