--- a/src/entities/Article/ui/ArticleCodeBlockComponent/ArticleCodeBlockComponent.module.scss
+++ b/src/entities/Article/ui/ArticleCodeBlockComponent/ArticleCodeBlockComponent.module.scss
@@ -1,7 +1,14 @@
 .ArticleCodeBlockComponent {
-  background-color: #f4f4f4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 0 20px;
+  padding: 0;
+  width: 100%;
+  height: auto;
+  background-color: #f5f5f5;
   border-radius: 5px;
-  padding: 1rem;
-  margin: 1rem 0;
-  overflow-x: auto;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgb(0 0 0 / 10%);
 }
