--- a/src/entities/Article/ui/ArticleTextBlockComponent/ArticleTextBlockComponent.module.scss
+++ b/src/entities/Article/ui/ArticleTextBlockComponent/ArticleTextBlockComponent.module.scss
@@ -1,5 +1,22 @@
 .ArticleTextBlockComponent {
-  font-size: 16px;
-  line-height: 1.5;
-  color: #333;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 0 20px;
+  padding: 30px;
+  width: 100%;
+  height: auto;
+  background-color: var(--inverted-bg-color);
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgb(0 0 0 / 10%);
+}
+
+.title {
+  margin-bottom: 15px;
+}
+
+.paragraph {
+  margin-top: 10px;
 }
