RA: 7. Article Page. Block Structure. Code Component. Copy LABEL, lesson_50 Part02

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -7,4 +7,7 @@
   --inverted-secondary-color: #7c8ed0;
   --skeleton-color: #202124;
   --skeleton-shadow: #4d515b;
+
+  // code
+  --code-bg-color: #414347;
 }
