--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -7,4 +7,7 @@
   --inverted-secondary-color: #979cb0;
   --skeleton-color: #c1c1d6;
   --skeleton-shadow: #b3c3ff;
+
+  // code
+  --code-bg-color: #c6c6ca;
 }
