--- a/src/app/styles/themes/pink.scss
+++ b/src/app/styles/themes/pink.scss
@@ -7,4 +7,7 @@
   --inverted-secondary-color: #fbf4f7;
   --skeleton-color: #ba8fa1;
   --skeleton-shadow: #ff2182;
+
+  // code
+  --code-bg-color: #e3cfd7;
 }
