RA: 7. Article Page. Block Structure. Code Component. Copy LABEL, lesson_50 Part03

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -5,8 +5,10 @@
 
   &:hover {
     opacity: 0.8;
-    background: var(--secondary-color);
-    color: var(--inverted-primary-color);
+    fill-opacity: 0.8;
+    stroke-opacity: 0.8;
+    // background: var(--secondary-color);
+    // color: var(--inverted-primary-color);
   }
 }
 
