--- a/src/entities/Article/ui/ArticleCodeBlockComponent/ArticleCodeBlockComponent.module.scss
+++ b/src/entities/Article/ui/ArticleCodeBlockComponent/ArticleCodeBlockComponent.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   margin: 0 0 20px;
-  padding: 0;
+  padding: 30px;
   width: 100%;
   height: auto;
   border-radius: 5px;
