--- a/src/shared/ui/Code/Code.module.scss
+++ b/src/shared/ui/Code/Code.module.scss
@@ -1,17 +1,23 @@
 .Code {
   border: 0 solid var(--primary-color);
-  padding: 20px;
+  width: 100%;
+  // padding: 20px;
   position: relative;
   background: var(--code-bg);
+  overflow: auto;
 }
 
 .copyBtn {
   position: absolute;
   top: 10px;
   right: 10px;
-  background-color: var(--primary-color);
+  // background-color: var(--primary-color);
   color: white;
   border: none;
   padding: 5px 10px;
   cursor: pointer;
+}
+
+.copyIcon path {
+  stroke: var(--primary-color);
 }
