RA: 7. 51 Comments Module. Data Normalization. EntityAdapter LABEL, lesson_51

--- a/src/app/styles/themes/pink.scss
+++ b/src/app/styles/themes/pink.scss
@@ -2,7 +2,7 @@
   --bg-color: #fbf4f7;
   --inverted-bg-color: #ba8fa1;
   --primary-color: #ff2182;
-  --secondary-color: #fbf4f7;
+  --secondary-color: #e470a3;
   --inverted-primary-color: #ff2182;
   --inverted-secondary-color: #fbf4f7;
   --skeleton-color: #ba8fa1;
