--- a/src/entities/Article/ui/ArticleTextBlockComponent/ArticleTextBlockComponent.module.scss
+++ b/src/entities/Article/ui/ArticleTextBlockComponent/ArticleTextBlockComponent.module.scss
@@ -7,7 +7,7 @@
   padding: 30px;
   width: 100%;
   height: auto;
-  background-color: var(--inverted-bg-color);
+  // background-color: var(--inverted-bg-color);
   border-radius: 5px;
   overflow: hidden;
   box-shadow: 0 0 20px rgb(0 0 0 / 10%);
