--- a/src/entities/Comment/ui/CommentcCard/CommentcCard.module.scss
+++ b/src/entities/Comment/ui/CommentcCard/CommentcCard.module.scss
@@ -1,8 +1,20 @@
 .CommentcCard {
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--primary-color);
   border-radius: 5px;
   margin-bottom: 10px;
+  width: 100%;
+}
+
+.header {
+  display: flex;
+  // justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+
+.text {
+  margin-top: 10px;
 }
