--- a/src/entities/Comment/ui/CommetnList/CommetnList.module.scss
+++ b/src/entities/Comment/ui/CommetnList/CommetnList.module.scss
@@ -7,5 +7,9 @@
   padding: 20px;
   // background-color: #f5f5f5;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+}
+
+.comment {
+  margin-top: 15px;
 }
