--- a/src/features/addCommentForm/ui/addCommentForm/addCommentForm.module.scss
+++ b/src/features/addCommentForm/ui/addCommentForm/addCommentForm.module.scss
@@ -1,5 +1,19 @@
 .addCommentForm {
   display: flex;
-  flex-direction: column;
-  margin-top: 20px;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+  // background-color: #f5f5f5;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+  margin-bottom: 20px;
+}
+
+.addCommentFormInput {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-grow: 1;
+  margin: 0;
 }
