RA: 8. List of articles. useHover. Switching view, lesson_54 Part002

--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -1,2 +1,10 @@
 .ArticleList {
+  display: flex;
+  flex-wrap: wrap;
+  // gap: 16px;
+}
+
+.card {
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
