--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -36,6 +36,7 @@
     width: 200px;
     height: 200px;
     border-radius: 12px;
+    object-fit: cover;
   }
 
   .infoWrapper {
@@ -63,4 +64,50 @@
 }
 
 .LIST {
+  width: 100%;
+
+  .views {
+    margin-left: auto;
+  }
+  // .card {
+  // }
+  .header {
+    display: flex;
+    align-items: center;
+  }
+
+  .username {
+    margin-left: 8px;
+  }
+
+  /* stylelint-disable-next-line no-descending-specificity */
+  .date {
+    margin-left: auto;
+  }
+
+  .title {
+    margin-top: 8px;
+    font-size: 18px;
+    font-weight: 500;
+  }
+
+  .img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 12px;
+    margin: 8px 0;
+  }
+
+  .footer {
+    display: flex;
+    align-items: center;
+    margin-top: 8px;
+  }
+
+  .textBlock {
+    display: block;
+    max-height: 200px;
+    overflow: hidden;
+  }
 }
