RA: 9. Sort. Search. Tabs. useDebounce, lesson_59 Part002

--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -7,11 +7,12 @@
 .GRID {
   display: flex;
   flex-wrap: wrap;
+  gap: 30px;
 
-  .card {
-    margin-right: 30px;
-    margin-bottom: 30px;
-  }
+  // .card {
+  //   margin-right: 30px;
+  //   margin-bottom: 30px;
+  // }
 }
 
 .LIST {
