--- a/src/entities/Article/ui/ArticleViewSelector/ArticleViewSelector.module.scss
+++ b/src/entities/Article/ui/ArticleViewSelector/ArticleViewSelector.module.scss
@@ -1,7 +1,8 @@
 .ArticleViewSelector {
   display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
+  align-items: center;
+  // justify-content: space-between;
+  margin-top: 10px;
 }
 
 .noSelected {
