RA: 9. List of recommendations. Grouping reducers. Scrollbar LABEL, lesson_60 Part001

--- a/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
+++ b/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
@@ -7,3 +7,10 @@
   width: 120px;
   margin-top: 16px;
 }
+
+.recommendation {
+  flex-wrap: nowrap !important;
+  margin-bottom: 26px;
+  overflow-y: hidden;
+  overflow-x: auto;
+}
