--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -9,10 +9,12 @@
   flex-wrap: wrap;
   gap: 30px;
 
-  // .card {
-  //   margin-right: 30px;
-  //   margin-bottom: 30px;
-  // }
+  .card {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    display: inline-flex;
+    // height: 300px;
+  }
 }
 
 .LIST {
