RA: 10. Positioning of elements. Indents according to design system, lesson_65 Part002

--- a/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -6,9 +6,9 @@
 }
 
 .item {
-  display: flex;
-  align-items: center;
-  margin-top: 10px;
+  /* display: flex; */
+  /* align-items: center; */
+  /* margin-top: 10px; */
 }
 
 .link {
