--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -20,7 +20,7 @@
 .InputWrapper {
   display: flex;
   // flex-direction: column;
-  margin-bottom: 1rem;
+  // margin-bottom: 1rem;
 }
 
 .placeholder {
