--- a/src/shared/ui/Dropdown/Dropdown.module.scss
+++ b/src/shared/ui/Dropdown/Dropdown.module.scss
@@ -15,6 +15,8 @@
   z-index: 100;
   border-radius: 8px;
   border: 1px solid var(--primary-color);
+  flex-direction: column;
+  display: flex;
 }
 .item {
   padding: 8px 16px;
@@ -30,4 +32,21 @@
   background: var(--inverted-primary-color);
   color: var(--card-bg);
   border-radius: 8px;
+}
+
+.optionDownLeft {
+  top: 100%;
+  right: 0;
+}
+.optionUpLeft {
+  bottom: 100%;
+  right: 0;
+}
+.optionDownRight {
+  top: 100%;
+  left: 0;
+}
+.optionUpRight {
+  bottom: 100%;
+  left: 0;
 }
