--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -8,6 +8,9 @@
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .overlay {
